--- a/public/index.html
+++ b/public/index.html
@@ -79,10 +79,13 @@
 	<!-- app -->
 	<script src="./app/app.module.js"></script>
 	<script src="./app/app.config.js"></script>
-	<!-- form -->
+	<!-- forms -->
 	<script src="./app/form/itemregistration.form.controller.js"></script>
 	<script src="./app/form/ordered.form.controller.js"></script>
 	<script src="./app/form/requested.form.controller.js"></script>
+	<!-- services -->
+	<script src="./app/services/item.service.js"></script>
+
 
 </body>
 </html>
