update services,routings and api's directory for starter files.

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,8 @@
 	<!-- services -->
 	<script src="./app/services/item.service.js"></script>
 	<script src="./app/services/member.service.js"></script>
+	<script src="./app/services/order.service.js"></script>
+	<script src="./app/services/branch.service.js"></script>
 
 
 </body>
