update getCompanyByTypeName and some more details in js

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 	<script src="./app/app.module.js"></script>
 	<script src="./app/app.config.js"></script>
 	<!-- controllers -->
-	<script src="./app/controllers/itemregistration.form.controller.js"></script>
+	<script src="./app/controllers/itemRegistration.form.controller.js"></script>
 	<script src="./app/controllers/ordered.form.controller.js"></script>
 	<script src="./app/controllers/requested.form.controller.js"></script>
 	<script src="./app/controllers/member.controller.js"></script>
@@ -89,6 +89,7 @@
 	<script src="./app/services/member.service.js"></script>
 	<script src="./app/services/order.service.js"></script>
 	<script src="./app/services/branch.service.js"></script>
+	<script src="./app/services/company.service.js"></script>
 
 
 </body>
