update directory and php file(items,orders)

--- a/public/index.html
+++ b/public/index.html
@@ -88,16 +88,18 @@
 	<script src="./app/controllers/main.controller.js"></script>
 	<script src="./app/controllers/profile.controller.js"></script>
 
-	<script src="./app/controllers/itemRegistration.form.controller.js"></script>
-	<script src="./app/controllers/stockAdjustment.form.controller.js"></script>
-	<script src="./app/controllers/ordered.form.controller.js"></script>
-	<script src="./app/controllers/requested.form.controller.js"></script>
+	<!-- forms controllers -->
+	<script src="./app/controllers/forms/itemRegistration.controller.js"></script>
+	<script src="./app/controllers/forms/stockAdjustment.controller.js"></script>
+	<script src="./app/controllers/forms/ordered.controller.js"></script>
+	<script src="./app/controllers/forms/requested.controller.js"></script>
 
-	<script src="./app/controllers/itemInfo.report.controller.js"></script>
-	<script src="./app/controllers/itemRegHistory.report.controller.js"></script>
-	<script src="./app/controllers/itemRemain.report.controller.js"></script>
-	<script src="./app/controllers/orderedHistoryCtrl.report.controller.js"></script>
-	<script src="./app/controllers/stockCard.report.controller.js"></script>
+	<!-- reports controllers -->
+	<script src="./app/controllers/reports/itemInfo.controller.js"></script>
+	<script src="./app/controllers/reports/itemRegHistory.controller.js"></script>
+	<script src="./app/controllers/reports/itemRemain.controller.js"></script>
+	<script src="./app/controllers/reports/orderedHistoryCtrl.controller.js"></script>
+	<script src="./app/controllers/reports/stockCard.controller.js"></script>
 	<!-- services -->
 	<script src="./app/services/item.service.js"></script>
 	<script src="./app/services/member.service.js"></script>
