update admin,alert,and chartjs

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,8 @@
 	<!-- vendors -->
 	<script src="./vendors/SweetAlert.min.js"></script>
 	<script src="./vendors/sweet-alert.min.js"></script>
+	<script src="./vendors/Chart.js"></script>
+	<script src="./vendors/angular-chart.min.js"></script>
 
 
 	<!-- app -->
@@ -136,6 +138,7 @@
 	<script src="./app/controllers/reports/itemRefill.controller.js"></script>
 	<script src="./app/controllers/reports/orderedHistoryCtrl.controller.js"></script>
 	<script src="./app/controllers/reports/stockCard.controller.js"></script>
+	<script src="./app/controllers/reports/capacity.controller.js"></script>
 
 	<!-- admin controllers -->
 	<script src="./app/controllers/reports/companyList.controller.js"></script>
